<resources>
    <string name="app_name">EDCompanion</string>
    <string name="edapi_v4_base">https://ed.9cw.eu/</string>
    <string name="edsm_base">https://www.edsm.net/</string>
    <string name="inara_api_base">https://inara.cz/</string>
    <string name="frontier_auth_base">https://auth.frontierstore.net/</string>
    <string name="frontier_api_base">https://companion.orerve.net/</string>
    <string name="commander_help_url">https://edcompanion.corenting.fr/commander</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="community_goals">Community Goals</string>
    <string name="community_goal_details">Community goal details</string>
    <string name="galnet">GalNet</string>
    <string name="news">News</string>
    <string name="distance_calculator">Distance calculator</string>
    <string name="ship_finder">Ship finder</string>
    <string name="commodity_finder">Commodity finder</string>
    <string name="commodities_list">Commodities</string>
    <string name="outfitting_finder">Outfitting finder</string>
    <string name="about">About</string>
    <string name="commander">Commander</string>
    <string name="updating_server_status">Updating server status…</string>
    <string name="server_status">Game server: %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="hint_end_date">End time</string>
    <string name="hint_participants">Participants</string>
    <string name="hint_tiers">Tiers</string>
    <string name="hint_system">System</string>
    <string name="finished">Finished</string>
    <string name="community_goal_description">Community goal description</string>
    <string name="objective">Objective</string>
    <string name="no_description_yet">No description yet</string>
    <string name="no_objective_yet">No objective yet</string>
    <string name="cg_system_distance">System: %1$s</string>
    <string name="cg_system_with_player_distance">System: %1$s (%2$.2f LY from you)</string>
    <string name="cg_end_date">End date: %1$s</string>
    <string name="cg_contributors">Contributors: %1$s</string>
    <string name="cg_progress">Progress: %1$s</string>
    <string name="cg_last_update">Last update: %1$s</string>
    <string name="no_results">No results</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="download_error">Error while downloading the content</string>
    <string name="no_chart_error">No history chart to display</string>
    <string name="no_chart_snackbar_error">Error while download the history chart</string>
    <string name="no_commander_accounts_linked_error_message">You don\'t have any account enabled in the settings to get your commander status. Enable at least one source in the settings.</string>
    <string name="no_commander_accounts_linked_error_settings_button">Open settings</string>
    <string name="error">Error</string>
    <string name="credits">%1$s credits</string>
    <string name="credits_with_loan">%1$s credits (with a %2$s credits loan)</string>
    <string name="rank_progress">%1$d %%</string>
    <string name="fleet">Fleet</string>
    <string name="station_label">Station</string>
    <string name="current_ship">Current ship</string>
    <string name="ship_value">Ship value</string>
    <string name="cargo_value">Cargo value</string>
    <string name="suit">Suit</string>
    <string name="first_primary_weapon">Primary weapon #1</string>
    <string name="second_primary_weapon">Primary weapon #2</string>
    <string name="secondary_weapon">Secondary weapon</string>
    <string name="weapon_display">%1$s (%2$s)</string>
    <string name="weapon_display_without_magazine">%1$s</string>
    <string name="loadout">Loadout</string>
    <string name="loadout_with_number">Loadout #%1$d</string>
    <string name="loadouts">Loadouts</string>
    <string name="rank_federation">Federation</string>
    <string name="rank_empire">Empire</string>
    <string name="rank_combat">Combat</string>
    <string name="rank_trading">Trade</string>
    <string name="rank_exploration">Exploration</string>
    <string name="rank_arena">Arena</string>
    <string name="rank_mercenary">Mercenary</string>
    <string name="rank_exobiologist">Exobiologist</string>
    <string name="player_ranks">Player ranks</string>
    <string name="faction_ranks">Faction ranks</string>
    <string-array name="ranks_combat">
        <item>Harmless</item>
        <item>Mostly Harmless</item>
        <item>Novice</item>
        <item>Competent</item>
        <item>Expert</item>
        <item>Master</item>
        <item>Dangerous</item>
        <item>Deadly</item>
        <item>Elite</item>
        <item>Elite I</item>
        <item>Elite II</item>
        <item>Elite III</item>
        <item>Elite IV</item>
        <item>Elite V</item>
    </string-array>
    <string-array name="ranks_trade">
        <item>Penniless</item>
        <item>Mostly Penniless</item>
        <item>Peddler</item>
        <item>Dealer</item>
        <item>Merchant</item>
        <item>Broker</item>
        <item>Entrepreneur</item>
        <item>Tycoon</item>
        <item>Elite</item>
        <item>Elite I</item>
        <item>Elite II</item>
        <item>Elite III</item>
        <item>Elite IV</item>
        <item>Elite V</item>
    </string-array>
    <string-array name="ranks_explorer">
        <item>Aimless</item>
        <item>Mostly Aimless</item>
        <item>Scout</item>
        <item>Surveyor</item>
        <item>Trailblazer</item>
        <item>Pathfinder</item>
        <item>Ranger</item>
        <item>Pioneer</item>
        <item>Elite</item>
        <item>Elite I</item>
        <item>Elite II</item>
        <item>Elite III</item>
        <item>Elite IV</item>
        <item>Elite V</item>
    </string-array>
    <string-array name="ranks_cqc">
        <item>Helpless</item>
        <item>Mostly Helpless</item>
        <item>Amateur</item>
        <item>Semi Professional</item>
        <item>Professional</item>
        <item>Champion</item>
        <item>Hero</item>
        <item>Legend</item>
        <item>Elite</item>
        <item>Elite I</item>
        <item>Elite II</item>
        <item>Elite III</item>
        <item>Elite IV</item>
        <item>Elite V</item>
    </string-array>
    <string-array name="ranks_mercenary">
        <item>Defenceless</item>
        <item>Mostly Defenceless</item>
        <item>Rookie</item>
        <item>Soldier</item>
        <item>Gunslinger</item>
        <item>Warrior</item>
        <item>Gladiator</item>
        <item>Deadeye</item>
        <item>Elite</item>
        <item>Elite I</item>
        <item>Elite II</item>
        <item>Elite III</item>
        <item>Elite IV</item>
        <item>Elite V</item>
    </string-array>
    <string-array name="ranks_exobiologist">
        <item>Directionless</item>
        <item>Mostly Directionless</item>
        <item>Compiler</item>
        <item>Collector</item>
        <item>Cataloguer</item>
        <item>Taxonomist</item>
        <item>Ecologist</item>
        <item>Geneticist</item>
        <item>Elite</item>
        <item>Elite I</item>
        <item>Elite II</item>
        <item>Elite III</item>
        <item>Elite IV</item>
        <item>Elite V</item>
    </string-array>
    <string-array name="ranks_federation">
        <item>None</item>
        <item>Recruit</item>
        <item>Cadet</item>
        <item>Midshipman</item>
        <item>Petty Officer</item>
        <item>Chief Petty Officer</item>
        <item>Warrant Officer</item>
        <item>Ensign</item>
        <item>Lieutenant</item>
        <item>Lieutenant Commander</item>
        <item>Post Commander</item>
        <item>Post Captain</item>
        <item>Rear Admiral</item>
        <item>Vice Admiral</item>
        <item>Admiral</item>
    </string-array>
    <string-array name="ranks_empire">
        <item>None</item>
        <item>Outsider</item>
        <item>Serf</item>
        <item>Master</item>
        <item>Squire</item>
        <item>Knight</item>
        <item>Lord</item>
        <item>Baron</item>
        <item>Viscount</item>
        <item>Count</item>
        <item>Earl</item>
        <item>Marquis</item>
        <item>Duke</item>
        <item>Prince</item>
        <item>King</item>
        <item>Admiral</item>
    </string-array>
    <string name="find">Find</string>
    <string name="first_system">First system</string>
    <string name="second_system">Second system</string>
    <string name="distance_result">Distance: %1$.2f LY</string>
    <string name="permit_required">Permit required for %1$s</string>
    <string name="permit_required_both">Permit required for %1$s and %2$s</string>
    <string name="distance_calculator_subtitle">Get the distance (in LY) between two systems</string>
    <string name="current_system">Current system</string>
    <string name="ship">Ship</string>
    <string name="distance_to_star">Distance to star</string>
    <string name="distance_label">Distance</string>
    <string name="type_label">Type</string>
    <string name="last_update_label">Last update</string>
    <string name="permit_required_label">Permit required</string>
    <string name="landing_pad_label">Landing pad</string>
    <string name="ship_finder_subtitle">Find the nearest station selling a specific ship</string>
    <string name="distance_ly">%1$.2f LY</string>
    <string name="distance_ls">%1$s ls</string>
    <string name="commodity_finder_subtitle">Find the nearest station selling or buying a specific commodity</string>
    <string name="commodity">Commodity</string>
    <string-array name="landing_pad_size">
        <item>S</item>
        <item>M</item>
        <item>L</item>
    </string-array>
    <string name="buy_or_sell">Buy or sell</string>
    <string name="stock_label">Stock</string>
    <string name="demand_label">Demand</string>
    <string name="price_label">Price</string>
    <string name="minimum_stock_or_demand">Minimum stock or demand</string>
    <string-array name="buy_sell_array">
        <item>Buy</item>
        <item>Sell</item>
    </string-array>
    <string name="outfitting_finder_subtitle">Find the nearest station selling or buying a specific outfitting</string>
    <string name="outfitting">Outfitting</string>
    <string name="commodities_list_subtitle">Find the average price of a commodity, the top stations to buy/sell from…</string>
    <string name="rare_commodity">Rare commodity</string>
    <string name="average_buy_price">Average buy price</string>
    <string name="average_sell_price">Average sell price</string>
    <string name="min_buy_price">Minimum buy price</string>
    <string name="max_sell_price">Maximum sell price</string>
    <string name="where_to_sell">Where to sell</string>
    <string name="where_to_buy">Where to buy</string>
    <string name="commodity_details">Commodity details</string>
    <string name="category">Category</string>
    <string name="buy_price">Buy price</string>
    <string name="sell_price">Sell price</string>
    <string name="price_difference">Price difference</string>
    <string name="systems">Systems</string>
    <string name="systems_subtitle">Search for a system (click on a result for more details about the system)</string>
    <string name="system">System</string>
    <string name="system_details">System details</string>
    <string name="stations">Stations</string>
    <string name="search">Search</string>
    <string name="allegiance_label">Allegiance</string>
    <string name="security_label">Security</string>
    <string name="government_label">Government</string>
    <string name="title_activity_settings">Settings</string>
    <string name="first_system_cache_key" translatable="false">first_system_cache_key</string>
    <string name="second_system_cache_key" translatable="false">second_system_cache_key</string>
</resources>