<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cg"
            android:icon="@drawable/ic_flag_grey600_24dp"
            android:title="@string/community_goals" />
        <item
            android:id="@+id/nav_galnet_news"
            android:icon="@drawable/elite_galnet"
            android:title="@string/galnet" />
        <item
            android:id="@+id/nav_galnet_reports"
            android:icon="@drawable/elite_galnet"
            android:title="@string/galnet_reports" />
        <item
            android:id="@+id/nav_distance_calculator"
            android:icon="@drawable/elite_map_route"
            android:title="@string/distance_calculator" />
        <item
            android:id="@+id/nav_ship_finder"
            android:icon="@drawable/ic_rocket_black_24dp"
            android:title="@string/ship_finder" />
        <item
            android:id="@+id/nav_cmdr"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/commander" />
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey600_24dp"
            android:title="@string/title_activity_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_grey600_24dp"
            android:title="@string/about" />
    </group>
</menu>
