<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/card_spacing"
        android:layout_marginTop="@dimen/card_spacing"
        android:layout_marginRight="@dimen/card_spacing"

        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/itemLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/commodity_finder"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleTextView"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/commodity_finder_subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <fr.corenting.edcompanion.views.SystemInputView
                android:id="@+id/systemInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtitleTextView"
                android:layout_marginTop="8dp"
                app:cacheKey="@string/first_system_cache_key"
                app:hint="@string/current_system" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commodityInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/systemInputView"
                android:layout_marginTop="8dp"
                android:hint="@string/commodity">

                <fr.corenting.edcompanion.views.DelayAutoCompleteTextView
                    android:id="@+id/commodityInputEditText"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/landingPadSizeLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/commodityInputLayout"
                android:layout_marginTop="8dp"
                android:hint="@string/landing_pad_size">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/landingPadSizeAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stockInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/landingPadSizeLayout"
                android:layout_marginTop="8dp"
                android:hint="@string/minimum_stock_or_demand">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stockInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/buyOrSellLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stockInputLayout"
                android:layout_marginTop="8dp"
                android:hint="@string/buy_or_sell">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/buyOrSellAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/findButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buyOrSellLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/find" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>