<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/card_spacing"
        android:layout_marginTop="@dimen/card_spacing"
        android:layout_marginRight="@dimen/card_spacing"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/itemLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/distance_calculator"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleTextView"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/distance_calculator_subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <fr.corenting.edcompanion.views.SystemInputView
                android:id="@+id/firstSystemInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtitleTextView"
                android:layout_marginTop="8dp"
                app:cacheKey="@string/first_system_cache_key"
                app:hint="@string/first_system" />

            <fr.corenting.edcompanion.views.SystemInputView
                android:id="@+id/secondSystemInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstSystemInputView"
                android:layout_marginTop="8dp"
                app:cacheKey="@string/second_system_cache_key"
                app:hint="@string/second_system" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/findButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/secondSystemInputView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/find" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.MaterialProgressBar.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/resultCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:layout_marginLeft="@dimen/card_spacing"
        android:layout_marginTop="@dimen/card_spacing"
        android:layout_marginRight="@dimen/card_spacing"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/resultItemLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/warningTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/resultTextView"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/warningText" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>