<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/card_spacing"
        android:layout_marginTop="@dimen/card_spacing"
        android:layout_marginRight="@dimen/card_spacing"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/itemLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/systems"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleTextView"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/systems_subtitle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/systemInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtitleTextView"
                android:layout_marginTop="8dp">

                <fr.corenting.edcompanion.views.DelayAutoCompleteTextView
                    android:id="@+id/systemInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/system"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/systemProgressBar"
                style="@style/Widget.MaterialProgressBar.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtitleTextView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:mpb_progressStyle="circular" />

            <Button
                android:id="@+id/findButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/systemInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/search" />

            <TextView
                android:id="@+id/emptyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/findButton"
                android:layout_marginTop="8dp"
                android:text="@string/nothing_to_display"
                android:textAlignment="center"
                android:visibility="gone" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>